# advent_of_code_2021

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
framework/: Cargo.toml
framework/src/: array.rs  astar.rs  day.rs  inputs.rs  lib.rs  prelude.rs  submissions.rs  utils.rs  vec.rs
framework/src/parsers/: combi.rs  common.rs  error.rs  mod.rs  multi.rs  numbers.rs  special.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day24_notes.txt  day25.rs  main.rs  ocr.rs  prelude.rs  submissions.rs
