[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
anyhow = "1.0"
arrayvec = "0.7"
bitvec = "0.22"
colored = "2.0"
framework = { path = "./framework" }
itertools = "0.10"
jagged_array = "0.2"
smallvec = "1.7"

[workspace]
members = [
    "framework"
]
